<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_nagrywania_d_wi_ku">Test nagrywania dźwięku</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Gracz</string>
    <string name="gm">Mistrz gry</string>
    <string name="start">Start</string>
    <string name="user">Użytkownik</string>
    <string name="edit_tasks">Edycja zadań</string>
    <string name="accept_tasks">Akceptacja zgłoszeń</string>
    <string name="generate_qr">Wygeneruj QR</string>
    <string name="name">Nazwa użytkownika</string>
    <string name="title">Tytuł</string>
    <string name="content">Treść</string>
    <string name="answer">Odpowiedź</string>
    <string name="answer_verb">Odpowiedz</string>
    <string name="scan_qr">Skanuj kod QR / Kreskowy</string>
    <string name="tasks_list">lista zadań</string>
    <string name="refresh">odśwież</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="add_task">Dodaj zadanie</string>
    <string name="accept_task">Zaakceptuj</string>
    <string name="decline_task">Odrzuć</string>
    <string name="team">Drużyna</string>
    <string name="textView">Example tasks</string>
    <string name="buttonPost">post task</string>
    <string name="buttonGet">get tasks</string>
    <string name="demo">Demo</string>
    <string name="server_error">Błąd komunikacji z serwerem, spróbuj ponownie</string>
    <string name="server_success">Wysłano</string>
    <string name="save">Zapisz</string>
    <string name="share">Udostępnij</string>
    <string name="QR_image">Kod QR</string>
</resources>