<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUserTypeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/usertypeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/playerRadioButton"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.16000003">

            <RadioButton
                android:id="@+id/playerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player" />

            <RadioButton
                android:id="@+id/gmRadioButton"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/gm" />
        </RadioGroup>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/gmModeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/gmEditRadioButton"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usertypeRadio">

            <RadioButton
                android:id="@+id/gmEditRadioButton"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_tasks" />

            <RadioButton
                android:id="@+id/gmAcceptRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept_tasks" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>